# GhostPort

./: .gitignore  HISTORY.md  README.md
docs/: VULNERABILITY_MANAGEMENT.md
docs/vulnerabilities/: TEMPLATE.md  VULN-001-UDP-DoS.md  VULN-002-Token-Leak.md  VULN-003-Jail-Leak.md  VULN-004-Lock-Poisoning.md  VULN-005-Session-Hijacking.md  VULN-006-Fail-Open-Watchdog.md  VULN-007-Weak-KDF.md  VULN-008-Cert-Pinning.md  VULN-009-Noise-Replay.md  VULN-010-Plaintext-Secrets.md  VULN-011-Static-Auth.md  VULN-012-TOTP-Replay.md  VULN-013-Broken-Access-Control.md  VULN-014-Slowloris.md  VULN-015-WAF-Bypass.md  VULN-016-Public-Exposure.md  VULN-017-UDP-Decryption-DoS.md  VULN-018-Lock-Poisoning-DoS.md  VULN-019-Connection-Persistence.md  VULN-020-WAF-Double-Encoding.md  VULN-021-ACL-Bypass.md  VULN-022-Jail-Strikes-Leak.md  VULN-023-WAF-Invalid-UTF8-Bypass.md  VULN-024_HTTP_Pipelining_Bypass.md
ghostport/: Cargo.toml  Client.toml  GhostPort.toml  ghostport.service
ghostport/certs/: server.crt  server.key
ghostport/scripts/: watchdog.sh
ghostport/src/: auth.rs  client.rs  config.rs  crypto.rs  honeypot.rs  jail.rs  knocker.rs  lib.rs  main.rs  proxy.rs  reporting.rs  router.rs  udp.rs  waf.rs
ghostport/tests/: auth_test.rs  e2e_system.rs  http_pipelining_test.rs  integration.rs  jail_test.rs  keygen_test.rs  noise_test.rs  router_test.rs  utf8_validation_test.rs  waf_test.rs
