[package]
name = "ghostport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio-rustls = "0.26.4"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
regex = "1.12.2"
urlencoding = "2.1.3"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls"] }
