[package]
name = "ghostport"
version = "0.1.0"
edition = "2021"
default-run = "ghostport"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio-rustls = "0.26.4"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
regex = "1.12.2"
urlencoding = "2.1.3"
totp-rs = "5.7.0"
base32 = "0.5.1"
snow = "0.9.6"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls"] }
