[package]
name = "ghostport"
version = "5.3.2"
edition = "2021"
default-run = "ghostport"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustls = { version = "0.23.35", features = ["ring"] } 
quinn = "0.11"
rustls-pemfile = "2.2.0"
regex = "1.12.2"
urlencoding = "2.1.3"
snow = "0.9.6"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
hex = "0.4"
argon2 = "0.5"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls"] }
